--- a/Projeto_Basico/teoria_javascript/CalcularIMC/index.html
+++ b/Projeto_Basico/teoria_javascript/CalcularIMC/index.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <div class="alert-error">Digite somente números</div>
+    <div class="message-error">Zero ou menor que zero não pode</div>
 
     <div class="container">
       <main class="card">
